<resources>
    <string name="app_name">The Best Currency!!!</string>
    <string name="select_currency">Select Currency</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="calculate">calculate</string>
    <string name="amount_of_currency">Amount Of Currency</string>
    <string name="_one">1</string>
    <string name="currency_conversion">Currency Conversion</string>
    <string name="login">   Email Address </string>
    <string name="password">   Password</string>
    <string name="please_register">Registration</string>
    <string name="registration">Register</string>
    <string name="logintv">Login</string>
    <string name="register">Register</string>
    <string name="btnLogin">Login</string>
    <string name="logout">Logout</string>
    <string-array name="currencies">
    <item>AUD</item>
    <item>BGN</item>
    <item>BRL</item>
    <item>CAD</item>
    <item>CHF</item>
    <item>CNY</item>
    <item>CZK</item>
    <item>DKK</item>
    <item>EUR</item>
    <item>HKD</item>
    <item>HRK</item>
    <item>HUF</item>
    <item>IDR</item>
    <item>ILS</item>
    <item>INR</item>
    <item>ISK</item>
    <item>JPY</item>
    <item>KRW</item>
    <item>MXN</item>
    <item>MYR</item>
    <item>NOK</item>
    <item>NZD</item>
    <item>PHP</item>
    <item>PLN</item>
    <item>RON</item>
    <item>RUB</item>
    <item>SEK</item>
    <item>SGD</item>
    <item>THB</item>
    <item>TRY</item>
    <item>USD</item>
    <item>ZAR</item>
    </string-array>
</resources>